--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Meu Segundo Projeto</title>
+    <title>primeiro</title>
 </head>
 <body>
     <h1>Olá, GitHub!</h1>
-    <p>Este é meu segundo projeto versionado com Git e GitHub.</p>
+    <p>Este é meu primeiro projeto versionado com Git e GitHub.</p>
 </body>
 </html>
