--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>primeiro</title>
+    <title>primeiro de muitos </title>
 </head>
 <body>
     <h1>Olá, GitHub!</h1>
